--- a/app/src/main/res/layout/activity_shoot_basketball.xml
+++ b/app/src/main/res/layout/activity_shoot_basketball.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".shootBasketball">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_layout"
+        tools:context=".GameActivity">
 
-    <ImageView
-        android:id="@+id/basketball"
-        android:layout_width="68dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/basketball"
+            android:layout_width="82dp"
+            android:layout_height="80dp"
+            app:srcCompat="@android:drawable/btn_star_big_off"
+            tools:layout_editor_absoluteX="164dp"
+            tools:layout_editor_absoluteY="389dp" />
+
+    </android.support.constraint.ConstraintLayout>
+
+   <!-- ?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/main_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".shootBasketball">
+
+<ImageView
+    android:id="@+id/basketball"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:adjustViewBounds="false"
+    app:srcCompat="@android:drawable/btn_star_big_on"
+    tools:srcCompat="@android:drawable/btn_star_big_on" />
+</RelativeLayout>-->
